renderer/styles/style.css
/* ... */
.qc-option-txt-with-image {
  position: absolute;
  margin-left: 4%;
  width: 100%;
}

.qc-long-text-header-image {
  height: 17.7vh;
  width: 80vw;
  background-color: #404041;
  min-height: 56px;
  padding: 0% 1% 1% 1%;
}


/*new css*/

#mcq-question {
  height: 17.7vh;
  width: 100%;
  display: inline-block;
  background-color: #404041;
  min-height: 56px;
  padding: 0% 1% 1% 1%;
}

.mcq-question-image {
  width: 15%;
  height: 56px;
  float: left;
  margin-left: -1%;
  object-fit: fill;
}

.mcq-question-text>span {
  color: white;
  font-size: 1em;
  text-align: center;
  line-height: 1;
  height: 100%;
  width: 77%;
  display: inline-block;
  padding-top: 0;
  padding: 1% 1% 1% 1%;
  line-height: 1.6;
}







/*Grid CSS*/

.qc-grid-option-container {
  margin: 0;
  text-align: left;
  overflow: hidden;
  width: 100%;
  display: table;
  margin-top: 2%;
  height: 26vh;
}

.qc-grid-option-outer-value {
  cursor: pointer;
  display: table-cell;
  text-align: center;
  vertical-align: middle;
  margin: 0;
  width: 25%;
}

.qc-grid-option-value {
  margin: 0 5px;
  height: 100%;
}

.qc-grid-option-text-outer {
  line-height: 1.5;
  padding: 5px;
  display: table;
  height: 100%;
  width: 95%;
}

.qc-grid-option-text {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  word-break: break-word;
  border: 1px solid #c8ccd0;
}

.qc-grid-option-value.grid-selected-option {
  border: 1px solid #4a90e2;
}

.qc-option-grid-checkbox {
  display: table-cell;
  position: relative;
  top: 50%;
  padding-left: 5%;
}

.qc-vertical-option-container {
  width: 80vw;
  overflow-x: auto;
  margin-top: 5%;
  height: auto;
  overflow-y: hidden;
}

.qc-vertical-option-table {
  height: 100%;
  width: 100%;
}

.qc-vertical-option-outer {
  height: 100%;
}

.qc-vertical-option-value {
  height: 98%;
  display: table;
  width: 100%;
}

.qc-vertical-option-td {
  padding: 0% 0.5%;
  min-width: 25vw;
}

.qc-option-vertical-text {
  border: 1px solid #c8ccd0;
  display: table-cell;
  vertical-align: middle;
  word-break: break-word;
  line-height: 1.2;
  width: 62%;
}

.qc-option-vertical-checkbox {
  display: table-cell;
  position: relative;
  top: 50%;
  right: 3%;
}

.qsverticalselectedopt {
  background-color: #4a90e2;
}

.mcq-selected-option {
  display: table-cell;
  width: 3px;
}

.qc-opt {
  display: inline;
}

audio.qc-vertical-audio {
  width: 28%;
  top: 62%;
  margin-left: 6%;
  position: absolute;
}

.qc-vertical-audio-with-image {
  width: 30%;
}

.qc-grid-audio-with-image {
  width: 45%;
}

.qc-horizontal-audio-with-image {
  width: 10%;
  margin-bottom: 4%;
}

.qc-horizontal-audio {
  position: absolute;
  width: 10%;
  margin-left: 5%;
  vertical-align: super;
}

.qc-question-audio-image {
  width: 6%;
  -webkit-filter: invert(100%);
  margin-top: 2%;
  display: inline-block;
  float: right;
}

.question-image {
  display: inline;
}

.mcq-question-text {
  display: inline;
}

.mcq-question-audio {
  display: inline;
}

span.qc-option-txt {
  position: absolute;
  vertical-align: top;
  margin-left: 20%;
  width: 64%;
  font-size: 0.8em;
  margin-top: -2%;
}

.qc-horizontal-audio-disable {
  position: absolute;
  width: 10%;
  opacity: 0.5;
  margin-left: 5%;
  vertical-align: super;
}

span.qc-option-txt-image {
  position: absolute;
  font-size: 0.8em;
  margin-left: 6%;
  width: 80%;
  margin-top: -2%;
  vertical-align: top;
}

span.qc-option-txt-only {
  position: absolute;
  font-size: 0.9em;
  margin-left: 4%;
  width: 95%;
  margin-top: -2%;
}

.qc-horizontal-audio-txt {
  left: 3%;
  position: absolute;
  width: 10%;
}

.qc-horizontal-audio-txt-disable {
  left: 3%;
  position: absolute;
  width: 10%;
  opacity: 0.5;
}

.qc-option-text >span {
  color: rgb(54, 54, 54);
  font-family: notosans;
}

.qc-option-container::-webkit-scrollbar {
  width: 0.7em;
}

.qc-option-container::-webkit-scrollbar-thumb {
  background-color: #4a4a4a;
  height: 75%;
}
span.qc-option-txt{
    position: absolute;
    font-size: 85%;
    margin-left: 2%;
    margin-top: -4%;
}

.qc-popup-close-button {
    position: absolute;
    right: -35px;
    color: white;
    bottom: 87%;
}

#image-model-popup .popup-overlay{
    opacity:0.8;
}
#image-model-popup .popup-full-body{
    width:auto;
    margin:auto;
}

#image-model-popup .assess-popup {
    position: relative;
    width:fit-content;
    top:0;
    left:0; 
    margin:auto;
}

#image-model-popup img.qc-question-fullimage {
    max-width: 100%;
    max-height: 100%;
}

#image-model-popup .qc-popup-close-button {
    position: absolute;
    right: -15px;
    top: -20px;
    color: white;
    font-size:20px;
}
  

.qc-option-txt-audio {
  position: absolute;
  font-size: 0.8em;
  margin-left: 18%;
  width: 80%;
  margin-top: -2%;
  vertical-align: top;
}

/* MCQ Horizontal Template Styling */
.mcq-horizontal-container .question {
  position: relative;
  height: 22vh;
  display: flex;
  padding: 0;
}
.question>.q-media{
  flex-shrink: 0;
    flex-basis: 82px;
    flex-grow: 0;
}
.question>.q-media-audio{
  flex-grow:1;
}
.question > .katex-display{
  margin: 0%;
}
.question>.q-text{
  flex-grow:11;
  text-align: initial;
}
.q-text-content{
  max-height: 14vh;
  margin: 4% 4% 2%;
}

.mcq-horizontal-container .q-image img {
    object-fit: fill;
    height: 23vh;
    width: 90%;
    min-width: 90%;
    z-index: 1;
}

.mcq-horizontal-container .a-image img {
 height: 18vh;
  width: 10vw;
  border-radius: 10%;
  z-index: 1;
  flex-basis: 18%;
  flex-grow: 0;
  margin-top: 3%;
  margin-bottom: -3%;
}

.mcq-horizontal-container .q-media-audio{

}

.mcq-horizontal-container .q-audio {
  position: absolute;
    top: 31%;
    left: 16%;
}

.mcq-horizontal-container .q-audio img {
  height: 22px;
  width: 22px;
  z-index: 99999;
  cursor: pointer;
}

.mcq-horizontal-container .a-audio {
      margin-top: 3%;
    margin-left: -4%;
}

.mcq-horizontal-container .a-audio img {
  height: 22px;
  width: 22px;
  z-index: 99999;
  cursor: pointer;
}
/* ... */

